# Morse_Code_Decoder_C

./: CMake  CMakeLists.txt  MorseCodeDecoder
docs/: Testing.odt  design.odt
inc/: main.h  morse_code.h  read.h
share/archive/cmake/: CMakeLists.txt  cmake
share/archive/sh_build_script/: build
share/supporting materials/: BubbleSort.c  DAmain2.c  DisplayBinary.c  Str2Main.c  StrEx1main.c  Using quicksort.c
share/test/: morse_code_1.txt  morse_code_2.txt  morse_code_3.txt  morse_code_4.txt  morse_code_5.txt
src/: main.c
src/morse_lib/: morse_code.c  read.c
